# CorniScan

./: render.yaml
_bmad-output/brainstorming/: brainstorming-session-2026-02-19.md
_bmad-output/implementation-artifacts/: 1-1-initialisation-projet-et-deploiement-de-base.md  1-2-base-de-donnees-et-table-utilisateurs.md  1-3-authentification-login-session-jwt-logout.md  1-4-changement-mot-de-passe-premier-login.md  2-1-consultation-liste-comptes-utilisateurs.md  2-2-creation-compte-operateur.md  2-3-desactivation-compte-operateur.md  2-4-protection-routes-admin.md  3-1-acces-flux-camera-arriere-portrait.md  3-2-detection-carte-bancaire-temps-reel.md  3-3-checklist-qualite-avant-capture.md  3-4-declenchement-et-capture-photo.md  4-1-soumission-photo-pipeline-analyse-backend.md  4-2-affichage-resultat-contour-et-dimensions.md  5-1-generation-dxf-r2018.md  (+8 more)
corniscan/: .gitignore  README.md  render.yaml
corniscan/backend/: .env.example  alembic.ini  pyproject.toml
corniscan/backend/alembic/: env.py
corniscan/backend/alembic/versions/: 001_create_users_table.py  002_add_is_active_to_users.py  003_add_last_login_at.py
corniscan/backend/app/: main.py
corniscan/backend/app/core/: config.py  database.py  security.py  seed.py
corniscan/backend/app/models/: user.py
corniscan/backend/app/routers/: admin.py  auth.py  scan.py
corniscan/backend/app/services/: dxf_service.py  email_service.py  vision_service.py
corniscan/backend/tests/: conftest.py  test_admin.py  test_auth.py  test_database.py  test_dxf_service.py  test_email_service.py  test_main.py  test_scan.py
(+55 files in other folders)
